--- a/package.json
+++ b/package.json
@@ -3,19 +3,14 @@
   "description": "Small JavaScript functions for common use cases.",
   "version": "2.0.0",
   "keywords": ["helpers", "js", "functions"],
-  "author": "Sacha Schmid",
+  "author": "Sacha Schmid (http://sachaschmid.ch)",
   "repository": {
     "type": "git",
     "url": "https://github.com/RadLikeWhoa/helpers.js"
   },
-  "licenses": [
-    {
-        "type": "MIT",
-        "url": "http://opensource.org/licenses/MIT"
-    }
-  ],
+  "license": "MIT",
   "devDependencies": {
-    "uglify-js": "2.2.5",
-    "jshint": "1.1.0"
+    "uglify-js": "~2.2.5",
+    "jshint": "~1.1.0"
   }
 }
