--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "helpers.js",
   "description": "Small JavaScript functions for common use cases.",
   "version": "2.0.0",
-  "keywords": ["helpers", "js", "functions"],
+  "keywords": [ "helpers", "js", "functions" ],
   "author": "Sacha Schmid (http://sachaschmid.ch)",
   "repository": {
     "type": "git",
@@ -10,7 +10,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "uglify-js": "~2.2.5",
-    "jshint": "~1.1.0"
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-jshint": "~0.3.0",
+    "grunt-contrib-qunit": "~0.2.0",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-connect": "~0.2.0"
   }
 }
