--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "type": "git",
     "url": "https://github.com/RadLikeWhoa/helpers.js"
   },
-  "license": "MIT",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/RadLikeWhoa/helpers.js/blob/master/LICENSE.md"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
