--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "helpers.js",
   "description": "Small JavaScript functions for common use cases.",
-  "version": "2.0.0",
+  "version": "2.1.1",
   "keywords": [ "helpers", "js", "functions" ],
   "author": "Sacha Schmid (http://sachaschmid.ch)",
   "repository": {
     "type": "git",
     "url": "https://github.com/RadLikeWhoa/helpers.js"
   },
-  "license": "MIT",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/RadLikeWhoa/helpers.js/blob/master/LICENSE.md"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
