--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Small JavaScript functions for common use cases.",
   "version": "2.1.1",
   "keywords": [ "helpers", "js", "functions" ],
-  "author": "Sacha Schmid (http://sachaschmid.ch)",
+  "author": "Sacha Schmid (http://sacha.me)",
   "repository": {
     "type": "git",
     "url": "https://github.com/RadLikeWhoa/helpers.js"
